spacing fixes when there's a message right above the articles list

--- a/sass/email/02_molecule/_m-teaser.scss
+++ b/sass/email/02_molecule/_m-teaser.scss
@@ -1,5 +1,5 @@
 .m-teaser {
-    padding-bottom: $standard-block-margin;
+    padding-bottom: $standard-block-padding;
 
     * {
         @include meta-preset( $bold: inherit, $italic: inherit );
