--- a/sass/email/03_organism/_o-newsletter-section.scss
+++ b/sass/email/03_organism/_o-newsletter-section.scss
@@ -1,5 +1,9 @@
 .o-columns.o-newsletter-section {
 
-    @include column( $selector: '.o-column.o-newsletter-listing', $max-width: 50%, $vertical-align: top, $text-align: left, $padding: 0 $standard-block-padding);
-    @include column( $selector: '.o-column.m-newsletter-ad', $max-width: 50%,  $vertical-align: top, $padding: 0 $standard-block-padding);
+    &.o-newsletter-section-top {
+        padding-top: $standard-block-padding;
+    }
+
+    @include column( $selector: '.o-column.o-newsletter-listing', $max-width: 50%, $vertical-align: top, $text-align: left, $padding: 0);
+    @include column( $selector: '.o-column.m-newsletter-ad-region', $max-width: 50%,  $vertical-align: top, $text-align: right, $padding: 0);
 }
